tests/logs.txt
In file included from ../map_tests/empty().cpp:2:
In file included from ../map_tests/__service.ipp:3:
In file included from ../map_tests/../../../map.hpp:5:
In file included from ../map_tests/../../../map_iterator.hpp:6:
../map_tests/../../../binary_tree.hpp:147:10: error: class member cannot be redeclared
                        Tree&   operator= (const Tree& other) {
                                ^
../map_tests/../../../binary_tree.hpp:134:10: note: previous definition is here
                        Tree&   operator= (const Tree& other) {
                                ^
 ^
In file included from ../map_tests/operator[].cpp:2:
In file included from ../map_tests/__service.ipp:3:
../map_tests/../../../map.hpp:138:16: error: no matching member function for call to 'insert'
                                return (*((insert(ft::make_pair(key, mapped_type()))).first)).second;
                                           ^~~~~~
../map_tests/operator[].cpp:35:5: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::operator[]' requested here
    mp[3] = 10;
    ^
../map_tests/operator[].cpp:52:70: note: in instantiation of function template specialization 'operator_sq_test<int, int>' requested here
    exit(run_map_unit_test<int, int>("operator[]", operator_sq_test, operator_sq_test));
                                                                     ^
../map_tests/../../../map.hpp:185:9: note: candidate function template not viable: requires 2 arguments, but 1 was provided
                        void    insert (InputIterator first, InputIterator last) {
                                ^
../map_tests/../../../map.hpp:171:13: note: candidate function not viable: requires 2 arguments, but 1 was provided
                        iterator        insert (iterator hint, const value_type& val) {
                                        ^
2 errors generated.
pp:73:4: note: candidate constructor not viable: requires single argument 'other', but no arguments were provided
                        map (const map& other) {
                        ^
3 errors generated.
